[package]
name = "sipc"
version = "0.1.0"
authors = ["randi <randyjunior2011@live.com>"]
edition = "2024"
description = "A SIP command line tool"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt", "macros", "signal"] }
voip-sip = { git = "https://github.com/randijunior/voip-rs" }
